[tool.poetry]
name = "reflection agent"
version = "0.1.0"
description = "A reflection agent curated for the course on udemy"
authors = ["AbdullahAlzariqi <abdallahtalat5597@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
langchain = "^0.3.9"
langchain-google-genai = "^2.0.6"
black = "^24.10.0"
isort = "^5.13.2"
langgraph = "^0.2.53"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
